--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,47 +7,15 @@ pr:
 - master
 
 jobs:
-# We projuce on mac and share the assets so we don't have to run projucer on linux
-- job: Projuce
-  pool:
-    vmImage: 'macos-10.14'
-
-  steps:
-  - checkout: self
-    fetchDepth: 1
-
-  - bash: |
-      set -e
-      set -o xtrace
-      echo "Uname -s output"
-      uname -s
-     
-      git submodule update --init --recursive
-
-      ./scripts/get-juce.sh osx
-      ./scripts/projuce-mac.sh
-
-      mkdir pipeline
-      tar czf pipeline/juced.tgz Builds/ JuceLibraryCode/
-    displayName: Make Projuce Output
-    
-  - task: PublishPipelineArtifact@0
-    inputs:
-      artifactName: 'JUCE_OUTPUTS'
-      targetPath: 'pipeline/'
-    displayName: Publish JUCE Artifacts 
-  
 
 - job: Build
-  dependsOn: Projuce
-  condition: succeeded()
   strategy:
     matrix:
       mac:
         imageName: 'macos-10.14'
         isMac: True
       win:
-        imageName: 'vs2017-win2016'
+        imageName: 'windows-2019'
         isWindows: True
       lin:
         imageName: 'ubuntu-18.04'
@@ -61,74 +29,14 @@ jobs:
     fetchDepth: 1
     # submodules: recursive # can't do submodules here b'cuz depth=1 fails with Github
 
-  - bash: |
-      mkdir pipeline
-    displayName: Setup Pipeline Dir
-
-  - task: DownloadPipelineArtifact@0
-    inputs:
-      artifactName: 'JUCE_OUTPUTS'
-      targetPath: 'pipeline/'
-
-  - bash: |
-      ./scripts/get-juce.sh
-      ls -l pipeline
-      tar xvzf pipeline/juced.tgz
-      
-      git submodule update --init --recursive
-
-      ./scripts/set-version.sh
-
-    displayName: Setup for Building
-
-  - bash: |
-      ./scripts/build-mac.sh
-      ./scripts/package-mac.sh
-    displayName: Build Mac Plugins
-    condition: variables.isMac
-
-
-  - task: PublishPipelineArtifact@0
-    inputs:
-      artifactName: 'MACOS_BUILD'
-      targetPath: 'products/'
-    displayName: Publish Mac DMG
-    condition: variables.isMac
-
-  - task: MSBuild@1
-    inputs:
-      solution: 'Builds\VisualStudio2017\tuning-workbench-synth.sln'
-      maximumCpuCount: true
-      platform: 'x64'
-      configuration: 'Release'
-    condition: variables.isWindows
-    displayName: Build Windows x64
-
-  - bash: |
-      cd Builds/VisualStudio2017/x64
-      mkdir assets
-      mv Release/Standalone\ Plugin/tuning-workbench-synth.exe assets/
-      mv Release/VST3/tuning-workbench-synth.vst3 assets/
-      GIT_TAG=`git rev-parse --short HEAD`
-      BUILDDATE=`date +%Y%m%d`
-      ZIPV="${GIT_TAG}-${BUILDDATE}"
-      7z.exe a ../../../products/tuning-workbench-synth-Win64bit-${ZIPV}.zip assets 
-    displayName: Build Windows Zip
-    condition: variables.isWindows
-
-  - task: PublishPipelineArtifact@0
-    inputs:
-      artifactName: 'WINDOWS_BUILD'
-      targetPath: 'products/'
-    displayName: Publish Windows Zip
-    condition: variables.isWindows
 
   - bash: |
       sudo apt-get install -y libgtk-3-dev
       sudo apt-get install -y libwebkit2gtk-4.0
       sudo apt-get install -y libwebkit2gtk-4.0-dev
       sudo apt-get install -y libcurl4-openssl-dev
-      sudo apt-get install -y alsa-base
+      sudo apt-get install -y alsa
+      sudp apt-get install -y alsa-tools
       sudo apt-get install -y libasound2-dev
       sudo apt-get install -y jack
       sudo apt-get install -y libjack-dev
@@ -147,24 +55,41 @@ jobs:
     condition: variables.isLinux
 
   - bash: |
-      ./scripts/build-lin.sh
-    displayName: Build Linux Plugins
-    condition: variables.isLinux
+      git submodule update --init --recursive
+    displayName: Submodule Update
 
   - bash: |
-      rm -rf products
-      mkdir products
-      ./scripts/package-lin.sh
+      cmake -Bbuild
+      cmake --build build --config Release --target tuning-workbench-synth
 
-      md5sum products/*
-      ls -lt products/*
-    displayName: Package Linux Plugins
-    condition: variables.isLinux
+      # I am unsure why this doesn't seem to work reliably as an internal cmake rule on win and lin
+      cmake --build build --config Release --target tuning-workbench-synth_Standalone
+      cmake --build build --config Release --target tuning-workbench-synth_VST3
+
+      # And make the final package
+      cmake --build build --config Release --target installer-pkg
+    displayName: Build
+
+
+  - task: PublishPipelineArtifact@0
+    inputs:
+      artifactName: 'MACOS_BUILD'
+      targetPath: 'build/asset/'
+    displayName: Publish Mac DMG
+    condition: variables.isMac
+
+
+  - task: PublishPipelineArtifact@0
+    inputs:
+      artifactName: 'WINDOWS_BUILD'
+      targetPath: 'build/asset/'
+    displayName: Publish Windows Zip
+    condition: variables.isWindows
 
   - task: PublishPipelineArtifact@0
     inputs:
       artifactName: 'LINUX_BUILD'
-      targetPath: 'products/'
+      targetPath: 'build/asset'
     displayName: Publish Linux Tar
     condition: variables.isLinux
 
