--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,7 +35,8 @@ jobs:
       sudo apt-get install -y libwebkit2gtk-4.0
       sudo apt-get install -y libwebkit2gtk-4.0-dev
       sudo apt-get install -y libcurl4-openssl-dev
-      sudo apt-get install -y alsa-base
+      sudo apt-get install -y alsa
+      sudp apt-get install -y alsa-tools
       sudo apt-get install -y libasound2-dev
       sudo apt-get install -y jack
       sudo apt-get install -y libjack-dev
