--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,12 +76,15 @@ target_sources(tuning-workbench-synth PRIVATE
 target_compile_definitions(tuning-workbench-synth PUBLIC
     JUCE_ALLOW_STATIC_NULL_VARIABLES=0
     JUCE_STRICT_REFCOUNTEDPOINTER=1
+
     JUCE_VST3_CAN_REPLACE_VST2=0
     JUCE_USE_CURL=0
     JUCE_WEB_BROWSER=0
+
     JUCE_DISPLAY_SPLASH_SCREEN=0
     JUCE_REPORT_APP_USAGE=0
-    JUCE_ALSA=0
+
+    JUCE_ALSA=1
     JUCE_JACK=1
 )
 
@@ -101,34 +104,39 @@ target_link_libraries(tuning-workbench-synth PRIVATE
 
 # Build installers
 get_target_property( OUTPUT_DIR tuning-workbench-synth RUNTIME_OUTPUT_DIRECTORY )
-add_custom_target( tuning-workbench-synth-pkg ALL )
-add_dependencies( tuning-workbench-synth-pkg tuning-workbench-synth )
+add_custom_target( installer-pkg )
+add_dependencies( installer-pkg tuning-workbench-synth )
+set( INSTALLER_DIR ${CMAKE_BINARY_DIR}/asset )
+set( INSTALLER_BASENAME "tuning-workbench-synth" )
 
 if( APPLE )
   add_custom_command(
-    TARGET tuning-workbench-synth-pkg
+    TARGET installer-pkg
     POST_BUILD
     WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-    COMMAND ${CMAKE_COMMAND} -E make_directory  ${CMAKE_BINARY_DIR}/asset
-    COMMAND hdiutil create ${CMAKE_BINARY_DIR}/asset/tuning-workbench-synth-macos-${GIT_COMMIT_HASH}.dmg -ov -volname "TWS-${GIT_COMMIT_HASH}" -fs HFS+ -srcfolder ${OUTPUT_DIR}
+    COMMAND ${CMAKE_COMMAND} -E make_directory  ${INSTALLER_DIR}
+    COMMAND hdiutil create ${INSTALLER_DIR}/${INSTALLER_BASENAME}-macos-${GIT_COMMIT_HASH}.dmg -ov -volname "${INSTALLER_BASENAME}-${GIT_COMMIT_HASH}" -fs HFS+ -srcfolder ${OUTPUT_DIR}
     )
 elseif( UNIX )
   add_custom_command(
-    TARGET tuning-workbench-synth-pkg
+    TARGET installer-pkg
     POST_BUILD
     WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-    COMMAND ${CMAKE_COMMAND} -E make_directory  ${CMAKE_BINARY_DIR}/asset
+    COMMAND ${CMAKE_COMMAND} -E make_directory  ${INSTALLER_DIR}
     COMMAND ls -l ${OUTPUT_DIR}
-    COMMAND cd ${OUTPUT_DIR} && tar cf "${CMAKE_BINARY_DIR}/asset/tuning-workbench-synth-linux-${GIT_COMMIT_HASH}.tgz" "tuning-workbench-synth" "tuning-workbench-synth.vst3" 
+    COMMAND cd ${OUTPUT_DIR} && tar cf "${INSTALLER_DIR}/${INSTALLER_BASENAME}-linux-${GIT_COMMIT_HASH}.tgz" "${INSTALLER_BASENAME}" "${INSTALLER_BASENAME}.vst3" 
     )
 else()
+  file( TO_NATIVE_PATH "${INSTALLER_DIR}/${INSTALLER_BASENAME}-win-${GIT_COMMIT_HASH}.zip" OUTPUT_ZIP )
+  message( "Creating ${OUTPUT_ZIP}" )
   add_custom_command(
-    TARGET tuning-workbench-synth-pkg
+    TARGET installer-pkg
     POST_BUILD
     WORKING_DIRECTORY ${OUTPUT_DIR}
-    COMMAND ${CMAKE_COMMAND} -E make_directory  ${CMAKE_BINARY_DIR}/asset
+    COMMAND ${CMAKE_COMMAND} -E make_directory  ${INSTALLER_DIR}
+    COMMAND ls
     COMMAND powershell Compress-Archive 
-             -DestinationPath "${CMAKE_BINARY_DIR}\\asset\\tuning-workbench-synth-win-${GIT_COMMIT_HASH}.zip" 
-             -Path "tuning-workbench-synth.exe", "tuning-workbench-synth.vst3" 
+             -DestinationPath "${OUTPUT_ZIP}"
+             -Path "${INSTALLER_BASENAME}.exe", "${INSTALLER_BASENAME}.vst3" 
     )
 endif()
