--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,10 +1,10 @@
 # Build tuning-workbench-synth with JUCE buidls
 
 trigger:
-- master
+- main
 
 pr:
-- master
+- main
 
 jobs:
 
@@ -102,7 +102,7 @@ jobs:
 
 - job: UpdateGithubRelease
   dependsOn: Build
-  condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
+  condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/main'))
 
   steps:
   - task: DownloadPipelineArtifact@0
